# DocumentScanner

./: CMakeLists.txt  CVAncillary.h  CVPointMover.cpp  CVPointMover.h  DSUtilities.cpp  DSUtilities.h  DocumentScanner.cpp  DocumentScanner.h  main.cpp  testPointMover.cpp
.cache/clangd/index/: CVPointMover.cpp.AD8D849388744C9B.idx  CVPointMover.h.425B690CFC0973C3.idx  DSUtilities.cpp.B85C349A956347CB.idx  DSUtilities.h.C151F53C2DDC63D3.idx  DocumentScanner.cpp.BA5C78E72ED76859.idx  DocumentScanner.h.6A0B94570D89B960.idx  documentScanner.cpp.F925DCF7ADBA3F22.idx  main.cpp.DF845FD57B197D83.idx  testPointMover.cpp.AD621ED0DDF833D6.idx
